# spotify-adblock

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  config.toml  debug_run.sh  remove_spotify_banner.sh  rustfmt.toml  spotify-adblock-deb.desktop  spotify-adblock-flatpack.desktop
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust-clippy.yml
cef-sys/: Cargo.toml  README.md  build.rs
cef-sys/src/: lib.rs
spotify-adblock/: Cargo.toml
spotify-adblock/src/: cef.rs  config.rs  lib.rs
spotify-adblock/src/hooks/: memory.rs  mod.rs  network.rs  requests.rs
spotify-adblock/src/utils/: logging.rs  mod.rs
src/: cef.rs  cef_urlrequest_capi.rs  lib.rs
