[workspace]
members = ["spotify-adblock", "cef-sys"]
exclude = []
resolver = "2"

# Shared workspace dependencies for version consistency
[workspace.dependencies]
# Core dependencies
lazy_static = "1.5"
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
toml = "0.9.8"

# Build dependencies
bindgen = "0.72.1"
cc = "1.0"

# THIS SECTION WAS MISSING - ADD IT:
[workspace.package]
authors = ["coleleavitt"]
edition = "2024"  # Changed from "2024" to "2021"
license = "MIT"
repository = "https://github.com/coleleavitt/spotify-adblock"
rust-version = "1.85"

# Workspace-wide profiles
[profile.release]
lto = true                          # Link-time optimization
opt-level = 3                       # Maximum optimization
panic = "abort"                     # Smaller binary size, critical for embedded
codegen-units = 1                   # Better optimization
strip = "symbols"                   # Remove debug symbols in final binary
overflow-checks = true              # Detect integer overflows, critical for safety

# For verification and testing
[profile.verify]
inherits = "release"
debug = true                        # Keep debug info for verification tools
debug-assertions = true             # Enable assertions
overflow-checks = true              # Critical safety check

# Development profile optimizations
[profile.dev]
opt-level = 1                       # Some optimization for faster builds
overflow-checks = true              # Safety checks in development

# Enforce memory safety and code quality workspace-wide
[workspace.lints.rust]
unsafe_code = "warn"                # Track unsafe code usage
non_ascii_idents = "forbid"         # Ensure readable identifiers
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "deny"                        # Enable all clippy lints
pedantic = "warn"                   # Strict code quality standards
nursery = "warn"                    # Experimental lints
cargo = "warn"                      # Cargo-specific lints

# Workspace metadata for tools
[workspace.metadata]
docs = { all-features = true, rustdoc-args = ["--cfg", "docsrs"] }

# Workspace patch section for any dependency overrides if needed
[patch.crates-io]
# Add any patches here if needed in the future
