[package]
name = "spotify-adblock"
version = "1.0.2"
authors = ["abba23"]
description = "Adblocker for Spotify"
edition = "2021"

[package.metadata.deb]
depends = "spotify-client"
enhances = "spotify-client"
assets = [
    ["target/release/libspotifyadblock.so", "usr/local/lib/spotify-adblock.so", "644"],
    ["config.toml", "/etc/spotify-adblock/config.toml", "644"],
    ["spotify-adblock-deb.desktop", "usr/local/share/applications/spotify-adblock-deb.desktop", "644"],
]

[dependencies]
lazy_static = "*"
libc = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_regex = "*"
toml = "*"

[lib]
name = "spotifyadblock"
crate_type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
